--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Origin Documentation</title>
+  <title>Origin Systems Foundation/title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -166,7 +166,7 @@
 
     <div class="nav-section">
       <h3>Getting Started</h3>
-      <a href="#overview">Overview</a>
+      <a href="#Origin Documentation">Origin Documentation</a>
       <a href="#syntax">Basic Syntax</a>
       <a href="#types">Data Types</a>
     </div>
