--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <img src="logo.png" alt="Origin Logo" style="width: 120px; margin-bottom: 16px;">
   <title>Origin Documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -20,19 +21,15 @@
     }
 
     * { box-sizing: border-box; }
-
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: var(--bg);
       color: var(--text);
     }
-
     a { color: var(--link); text-decoration: none; }
     a:hover { text-decoration: underline; }
-
     .layout { display: flex; min-height: 100vh; }
-
     .sidebar {
       width: 280px;
       background: var(--sidebar);
@@ -42,10 +39,8 @@
       top: 0; bottom: 0;
       overflow-y: auto;
     }
-
     .sidebar h1 { font-size: 1.6rem; margin: 0 0 10px 0; color: white; }
     .sidebar p { font-size: 0.85rem; color: var(--muted); margin-bottom: 24px; }
-
     .nav-section { margin-bottom: 20px; }
     .nav-section h3 {
       font-size: 0.75rem;
@@ -55,13 +50,10 @@
       margin-bottom: 8px;
     }
     .nav-section a { display: block; padding: 4px 0; font-size: 0.9rem; }
-
     .content { margin-left: 280px; padding: 48px 64px; max-width: 1000px; }
-
     h2 { font-size: 2.1rem; margin-top: 40px; margin-bottom: 12px; border-bottom: 1px solid var(--border); padding-bottom: 10px; }
     h3 { margin-top: 30px; font-size: 1.4rem; color: var(--accent); }
     p { line-height: 1.65; margin-bottom: 16px; }
-    
     code {
       background: var(--code);
       padding: 2px 6px;
@@ -70,7 +62,6 @@
       font-size: 0.9em;
       color: #d6e0ff;
     }
-
     pre {
       background: var(--code);
       border: 1px solid var(--border);
@@ -79,22 +70,18 @@
       overflow-x: auto;
       margin: 16px 0 24px;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin: 20px 0;
       font-size: 0.9rem;
     }
-
     th, td {
       text-align: left;
       padding: 12px;
       border: 1px solid var(--border);
     }
-
     th { background: var(--table-header); color: white; }
-
     .note {
       background: rgba(79,124,255,0.1);
       border-left: 4px solid var(--accent);
@@ -108,6 +95,9 @@
 
 <div class="layout">
   <aside class="sidebar">
+    <div style="text-align: center; margin-bottom: 16px;">
+      <img src="logo.png" alt="Origin Logo" style="width: 120px;">
+    </div>
     <h1>Origin</h1>
     <p>v1.0 Documentation</p>
     <div class="nav-section">
@@ -122,12 +112,13 @@
       <a href="#expressions">Expressions & Operators</a>
       <a href="#control">Control Flow</a>
       <a href="#functions">Functions & Calls</a>
-    </nav-section>
+    </div>
     <div class="nav-section">
       <h3>Advanced</h3>
       <a href="#lists">Lists & Indexing</a>
       <a href="#io">Input / Output</a>
       <a href="#ast">AST Node Reference</a>
+      <a href="#len">len() Function</a>
     </div>
   </aside>
 
@@ -145,10 +136,10 @@
           <tr><th>Token Type</th><th>Examples</th></tr>
         </thead>
         <tbody>
-          <tr><td>KEYWORD</td><td><code>let, const, if, elif, else, for, while, print, return, yield, break, continue, input, true, false, int, float, str, import</code></td></tr>
+          <tr><td>KEYWORD</td><td><code>let, const, if, elif, else, for, while, print, return, yield, break, continue, input, true, false, int, float, str, import, len, append</code></td></tr>
           <tr><td>IDENTIFIER</td><td><code>x, myVar, calculate</code></td></tr>
           <tr><td>NUMBER</td><td><code>123, 3.14</code></td></tr>
-          <tr><td>ASSIGN / ASSIGN_OP</td><td><code>=, +=, -=, *=, /=, %=, **=, //=, &=, `=</code></td></tr>
+          <tr><td>ASSIGN / ASSIGN_OP</td><td><code>=, +=, -=, *=, /=, %=, **=, //=</code></td></tr>
           <tr><td>ARITH / COMP</td><td><code>+, -, *, /, **, //, %, ==, !=, <=, >=, <, ></code></td></tr>
           <tr><td>LOGIC</td><td><code>and, or, not, &&, ||, !</code></td></tr>
           <tr><td>UNARY</td><td><code>++, --</code></td></tr>
@@ -174,10 +165,13 @@ arr[0] -= 1</code></pre>
 
     <section id="expressions">
       <h2>Expressions</h2>
-      <p>Origin includes standard arithmetic and comparison, as well as unique unary and special operators.</p>
+      <p>Origin includes arithmetic, comparison, unary, logic, and special operators.</p>
       <pre><code># Unary
 ++x
 --y
+
+# Logic
+x and y or not z
 
 # Special Operators
 result = val ?? default
@@ -186,38 +180,77 @@ chain = a -> b => c</code></pre>
 
     <section id="control">
       <h2>Control Flow</h2>
+      <h3>Conditionals</h3>
+      <pre><code>if x > 5 {
+    print "big"
+} elif x == 5 {
+    print "equal"
+} else {
+    print "small"
+}</code></pre>
       <h3>Loops</h3>
-      <p>Supports <code>while</code> loops and <code>for...in range</code> expressions.</p>
+      <p>Supports <code>while</code> and <code>for...in range</code> loops.</p>
       <pre><code>for i in range(1, 5) {
     if i == 3 { continue }
     print i
+}
+
+while x < 10 {
+    x += 1
+    if x == 7 { break }
 }</code></pre>
     </section>
 
     <section id="functions">
       <h2>Functions and Calls</h2>
-      <p>Functions are first-class objects. Origin supports both <code>return</code> for standard values and <code>yield</code> for generator-like behavior.</p>
+      <p>Functions are first-class objects. Supports <code>return</code> and <code>yield</code>.</p>
       <pre><code>result = myFunc(42)
 return x + 5
 yield x</code></pre>
     </section>
 
+    <section id="lists">
+      <h2>Lists & Indexing</h2>
+      <pre><code>let mylist = [1, 2, 3]
+mylist[0] = 10
+mylist.append(4)
+print mylist</code></pre>
+      <p>Lists support indexing, assignment, and the <code>append()</code> method.</p>
+    </section>
+
+    <section id="len">
+      <h2>len() Function</h2>
+      <p>The <code>len()</code> function returns the number of elements in a list or string.</p>
+      <pre><code>let mylist = [1, 2, 3]
+print(len(mylist))  # 3
+
+let mystr = "hello"
+print(len(mystr))   # 5</code></pre>
+    </section>
+
+    <section id="io">
+      <h2>Input / Output</h2>
+      <pre><code>x = input("Enter a number: ")
+print x</code></pre>
+    </section>
+
     <section id="ast">
       <h2>AST Node Reference</h2>
-      <p>The parser generates the following nodes for the interpreter:</p>
       <table>
         <thead>
           <tr><th>Node Type</th><th>Purpose</th></tr>
         </thead>
         <tbody>
-          <tr><td><code>NumberNode / StringNode</code></td><td>Literal values</td></tr>
-          <tr><td><code>VarNode / AssignNode</code></td><td>Variable access and declaration</td></tr>
-          <tr><td><code>CompoundAssignNode</code></td><td>Handling <code>+=</code>, <code>-=</code>, etc.</td></tr>
-          <tr><td><code>BinOpNode / LogicOpNode</code></td><td>Arithmetic and boolean logic</td></tr>
+          <tr><td><code>NumberNode / StringNode / BoolNode</code></td><td>Literal values</td></tr>
+          <tr><td><code>VarNode / AssignNode / CompoundAssignNode</code></td><td>Variable access and assignment</td></tr>
+          <tr><td><code>BinOpNode / LogicOpNode / UnaryOpNode / SpecialOpNode</code></td><td>Arithmetic, logic, unary, and special operations</td></tr>
           <tr><td><code>IfNode / ElifNode</code></td><td>Conditional branching</td></tr>
           <tr><td><code>WhileNode / ForNode</code></td><td>Iteration structures</td></tr>
+          <tr><td><code>BreakNode / ContinueNode</code></td><td>Loop control</td></tr>
+          <tr><td><code>ReturnNode / YieldNode</code></td><td>Function return and generator yield</td></tr>
           <tr><td><code>CallNode</code></td><td>Function invocation</td></tr>
-          <tr><td><code>IndexNode / IndexAssignNode</code></td><td>List manipulation</td></tr>
+          <tr><td><code>IndexNode / IndexAssignNode</code></td><td>List access and assignment</td></tr>
+          <tr><td><code>LenNode</code></td><td>Length of list or string</td></tr>
         </tbody>
       </table>
     </section>
