--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <img src="logo.png" alt="Origin Logo" style="width: 120px; margin-bottom: 16px;">
+  <img src="Screenshot 2025-12-28 184831.png" alt="Origin Logo" style="width: 120px; margin-bottom: 16px;">
   <title>Origin Documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -96,7 +96,7 @@
 <div class="layout">
   <aside class="sidebar">
     <div style="text-align: center; margin-bottom: 16px;">
-      <img src="logo.png" alt="Origin Logo" style="width: 120px;">
+      <img src="Screenshot 2025-12-28 184831.png" alt="Origin Logo" style="width: 120px;">
     </div>
     <h1>Origin</h1>
     <p>v1.0 Documentation</p>
