--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <img src="Screenshot 2025-12-28 184831.png" alt="Origin Logo" style="width: 120px; margin-bottom: 16px;">
   <title>Origin Documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -96,9 +95,9 @@
 <div class="layout">
   <aside class="sidebar">
     <div style="text-align: center; margin-bottom: 16px;">
-      <img src="Screenshot 2025-12-28 184831.png" alt="Origin Logo" style="width: 120px;">
+      <img src="image.png" alt="Origin Logo" style="width: 120px;">
     </div>
-    <h1>Origin</h1>
+    <h1>Origin Documentation</h1>
     <p>v1.0 Documentation</p>
     <div class="nav-section">
       <h3>Core</h3>
@@ -256,6 +255,6 @@ print x</code></pre>
     </section>
   </main>
 </div>
-
+<h1>Origin Systems Foundation</h1>
 </body>
 </html>
