--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <div style="text-align: center; margin-bottom: 16px;">
       <img src="image.png" alt="Origin Logo" style="width: 120px;">
     </div>
-    <h1>Origin Documentation</h1>
-    <p>v1.0 Documentation</p>
+    <h1 class="center-text">Origin v1.0</h1>
+    <p class="center-text">Code Documentation</p>
     <div class="nav-section">
       <h3>Core</h3>
       <a href="#overview">Overview</a>
