--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="docs.html">Docs</a></li>
                 <li><a href="https://github.com/boblio-max/origin">GitHub</a></li>
                 <li><a href="others.html">Other Projects</a></li>
+                <li><a href="tutorials.html">Tutorials</a></li>
                 <li><a href="community.html">Community</a></li>
             </ul>
         </nav>
@@ -30,7 +31,23 @@
 
                 </div>
                 <div class="spacer">></div>
-                
+                <div class="container">
+                    <div href="https://github.com/boblio-max/origin" class="box">1. Download the Repository</div>
+                    <div class="box">2. Explore the Documentation</div>
+                    <div class="box">3. Write Your First Program</div>
+                     <div class="box">4. Join the Community</div>
+                </div>
+                <div class="spacer">></div>
+                <div>
+                    <div class="box1">Latest News:
+                        <ul>
+                            <p> - Origin v1.0 Released!</p>
+                            <p> - Join our Community Forum</p>
+                            <p> - Check out New Tutorials</p>
+                        </ul>
+                    </div>
+                </div>
+            </div>
     </section>
 </body>
 </html>
