--- a/others.html
+++ b/others.html
@@ -16,6 +16,7 @@
                 <li><a href="docs.html">Docs</a></li>
                 <li><a href="https://github.com/boblio-max/origin">GitHub</a></li>
                 <li><a href="others.html" class="btn btn-primary">Other Projects</a></li>
+                <li><a href="tutorials.html">Tutorials</a></li>
                 <li><a href="community.html">Community</a></li>
             </ul>
         </nav>
